# sw_hellocpm

./: NOTES.md  README.md
app_hellocpm/: CMakeLists.txt  README.md  dependencies.cmake  main.c  really_clean.sh
app_helloworld/: CMakeLists.txt  README.md  dependencies.cmake  main.c  really_clean.sh
cmake/: xmos_toolchain.cmake
